--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -4,9 +4,11 @@ html(lang="ru")
     title="Заголовок"
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(charset="utf-8")
-    link(rel="stylesheet", href="css/main.css")
+    link(rel="stylesheet", href="css/main.min.css")
   body
     main
       .container
+  script(src="js/libs.min.js")
+  script(src="js/common.js")
 
 
