--- a/app/stylus/mixins.styl
+++ b/app/stylus/mixins.styl
@@ -9,3 +9,9 @@ clearfix() {
     clear: both
   }
 }
+center() {
+  position: absolute
+  top: 50%
+  left: 50%
+  transform: translate(-50%, -50%)
+}
