directory stylus, add popup js

--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -1,8 +1,13 @@
-@import "reset"
-@import "var"
-@import "mixins"
-@import "fonts"
-@import "header"
-@import "layouts"
-@import "form"
-@import "footer"
+@import "base/reset"
+@import "base/fonts"
+
+@import "utils/var"
+@import "utils/mixins"
+
+@import "layout/header"
+@import "layout/form"
+@import "layout/footer"
+
+@import "components/carousel"
+
+@import "pages/index"
