--- a/app/stylus/base/reset.styl
+++ b/app/stylus/base/reset.styl
@@ -6,7 +6,6 @@
   margin 0
   padding 0
   font inherit
-  box-sizing border-box
 
 // HTML5 display definitions
 // ==========================================================================
@@ -61,7 +60,7 @@ html
   -webkit-tap-highlight-color rgba(0, 0, 0, 0)    // 3
   -webkit-focus-ring-color rgba(255, 255, 255, 0) // 3
   cursor default                                  // 4
-
+  box-sizing: border-box    *, *:before, *:after  box-sizing: inherit
 // Set 100% line-height
 body
   font-size 100%
