add flex-grid-framework, fix popup

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -1,3 +1,4 @@
+
 @import "base/reset"
 @import "base/fonts"
 @import "base/base"
@@ -5,6 +6,7 @@
 @import "utils/var"
 @import "utils/mixins"
 
+@import "layout/grid"
 @import "layout/header"
 @import "layout/animation"
 @import "layout/form"
@@ -13,3 +15,5 @@
 @import "components/carousel"
 
 @import "pages/index"
+
+@import "vendors/flex-grid-framework"
